--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,6 @@
 .main {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   padding: 1.5rem 1rem;
 }
@@ -29,7 +31,7 @@
 /* Responsive */
 @media (max-width: 768px) {
   .main {
-    padding: 1.25rem .75rem;
+    padding: 1.25rem 0.75rem;
   }
 
   .header {
